fix: screen too wide

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
     margin: 0;
 }
