--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     transition: all 0.6s ease-out;
 }
